# cav-system

./: .example.env  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
backend/: .gitignore  Cargo.toml  tauri.conf.json
backend/cache_storage/: local
backend/src/: controller.rs  lib.rs  main.rs
backend/src/analysis/: ranking.rs
backend/src/configuration/cve/endpoints/: nist_endpoint.rs
backend/src/configuration/cve/importers/: nessus_importer.rs
backend/src/schema/: asset.rs  cve.rs  rank.rs  storage.rs
backend/src/storage/: db_handler.rs
frontend/: App.jsx  App.vue  main.ts
frontend/classes/AssetTypes/: AssetSchema.ts  BaseEdge.ts  BaseNode.ts  RouterNode.ts
frontend/components/: Analysis.vue  CVE.vue  Loading.vue  MainPanel.vue  Network.vue
frontend/components/Assets/Edges/: EthernetEdge.vue  WirelessEdge.vue
frontend/components/Assets/Nodes/: BaseNode.vue  DesktopNode.vue  FirewallNode.vue  IoTDeviceNode.vue  LaptopNode.vue  LoadBalancerNode.vue  MobileDeviceNode.vue  PrinterNode.vue  RouterNode.vue  ServerNode.vue  StorageNode.vue  SwitchNode.vue
frontend/router/: index.ts
src/: lib.rs  main.rs
src/configuration/assets/: assets_config.rs
src/configuration/cve/endpoints/: cve_endpoint.rs  nist_endpoint.rs
src/configuration/cve/importers/: cve_importer.rs  nessus_importer.rs
src/schema/: asset.rs  rank.rs  storage.rs
src/storage/: db_handler.rs
