[package]
name = "cav-system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
csv = "1.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
polodb_core = "4.4.2"
bson = "2.11.0"
dotenv = "0.15.0"
